# nanocraft

./: .gitignore  README.md  shell.nix
.github/workflows/: lint_and_format.yml
backend/: .env.example  .gitignore  README.md  database.py  main.py  pyproject.toml  requirements.txt  scraper.py
backend/db/: database.py
backend/models/: instruction.py
backend/templates/: chat_prompt.md  system_prompt.md
backend/utils/: chat.py  gemini.py  scraper.py  workers.py
frontend/: .eslintrc.json  App.tsx  README.md  eslint.config.js  index.css  index.html  index.tsx  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts
frontend/components/: BackgroundElements.tsx  Landing.tsx  Library.tsx  LogoIcon.tsx  Processing.tsx  SEOHead.tsx  Terms.tsx  Workspace.tsx
frontend/pages/: ChatPage.tsx  LandingPage.tsx  LibraryPage.tsx  TermsPage.tsx
frontend/public/: humans.txt  manifest.json  robots.txt  sitemap.xml
frontend/services/: apiService.ts  exportService.ts
