[project]
name = "nanocraft-backend"
version = "0.1.0"
description = "NanoCraft Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.16.0",
    "google-genai>=1.61.0",
    "beautifulsoup4>=4.14.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "sentry-sdk>=2.50.0",
]

[tool.setuptools]
packages = ["db", "models", "utils"]

[tool.uv]
managed = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
